crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_ignore_null_inlined_qrl.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 957
expression: output
---
============================= test.tsx ==
import { inlinedQrl } from "@qwik.dev/core";
const foo = inlinedQrl(null, "some_hash");

== DIAGNOSTICS ==
[]
