crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_keep_module_level_var_used_in_both_main_and_qrl.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 960
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { isServer } from "@qwik.dev/core";
//
const q_useHook_fn_kScGJcREaTg = /*#__PURE__*/ qrl(()=>import("./test.tsx_useHook_fn_kScGJcREaTg"), "useHook_fn_kScGJcREaTg");
//
const state = {
	counter: 0,
	id: Math.random().toString(36).slice(2, 8)
};
console.log("Module init, id:", state.id);
export function doSomething() {
	if (!isServer) {
		state.counter++;
	}
}
export function useHook() {
	const fn = q_useHook_fn_kScGJcREaTg;
	return fn;
}

============================= test.tsx_useHook_fn_kScGJcREaTg.js (ENTRY POINT) ==
export const useHook_fn_kScGJcREaTg = () => {
	state.counter++;
	console.log(state.id);
};

/*
{
  "origin": "test.tsx",
  "name": "useHook_fn_kScGJcREaTg",
  "entry": null,
  "displayName": "test.tsx_useHook_fn",
  "hash": "kScGJcREaTg",
  "canonicalFilename": "test.tsx_useHook_fn_kScGJcREaTg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    292,
    354
  ]
}
*/
== DIAGNOSTICS ==
[]
