crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_keep_non_migrated_binding_from_shared_array_destructuring_declarator.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 959
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { $ } from "@qwik.dev/core";
const [a, b] = [1, 2];
console.log("root", b);
export const handler = qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");

============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
export const _u6BtPnK76q4 = () => {
	console.log("qrl", a);
};

/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    110,
    147
  ]
}
*/
== DIAGNOSTICS ==
[]
