crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_keep_non_migrated_binding_from_shared_destructuring_with_rest.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
const q__u6BtPnK76q4 = /* @__PURE__ */ qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
const { a, ...rest } = {
	a: 1,
	b: 2,
	c: 3
};
console.log("root", rest.b, rest.c);
export const handler = q__u6BtPnK76q4;
export { a as _auto_a };
============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
export const _u6BtPnK76q4 = () => {
	console.log("qrl", a);
};

/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    145,
    182
  ]
}
*/
== DIAGNOSTICS ==
[]
