crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_keep_root_var_used_by_export_decl_and_qrl.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { $ } from "@qwik.dev/core";
const q__u6BtPnK76q4 = /*#__PURE__*/ qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
const shared = { id: "abc" };
export const exportedValue = shared.id;
export const handler = q__u6BtPnK76q4;

============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
export const _u6BtPnK76q4 = () => {
	console.log(shared.id);
};

/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    136,
    174
  ]
}
*/
== DIAGNOSTICS ==
[]
