crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_make_component_jsx_split_with_bind.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 965
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useSignal } from "@qwik.dev/core";
export default qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");

============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
export const _u6BtPnK76q4 = () => {
  const Cmp = Math.random() >= 0.5 ? 'button' : 'input'
  const sig = useSignal(0)
  return (
    <div>
      <Cmp bind:value={sig} />
    </div>
  );
};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    73,
    245
  ]
}
*/
== DIAGNOSTICS ==
[]
