crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_mark_props_as_var_props_for_inner_cmp.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { useResourceQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Image_component_CS20HgBlRYI = /*#__PURE__*/ qrl(()=>import("./test.tsx_Image_component_CS20HgBlRYI"), "Image_component_CS20HgBlRYI");
const q_ModelImg_component_iJe6ICWVnyA = /*#__PURE__*/ qrl(()=>import("./test.tsx_ModelImg_component_iJe6ICWVnyA"), "ModelImg_component_iJe6ICWVnyA");
//
export const Image = /*#__PURE__*/ componentQrl(q_Image_component_CS20HgBlRYI);
export const ModelImg = /*#__PURE__*/ componentQrl(q_ModelImg_component_iJe6ICWVnyA);

============================= test.tsx_Image_component_CS20HgBlRYI.js (ENTRY POINT) ==
export const Image_component_CS20HgBlRYI = (props) => {
  return (
    <>
      <img src={`${props.src}`} />
    </>
  );
};
/*
{
  "origin": "test.tsx",
  "name": "Image_component_CS20HgBlRYI",
  "entry": null,
  "displayName": "test.tsx_Image_component",
  "hash": "CS20HgBlRYI",
  "canonicalFilename": "test.tsx_Image_component_CS20HgBlRYI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    200,
    292
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_ModelImg_component_iJe6ICWVnyA.js (ENTRY POINT) ==
import { Image } from "./test";
import { Resource } from "@qwik.dev/core";
import { serverImg } from "~/routes/(authenticated)/layout";
import { useResource$ } from "@qwik.dev/core";
export const ModelImg_component_iJe6ICWVnyA = (props) => {
  const imgLoc = useResource$(async ({ track }) => {
    track(() => props.store.model);
    return await serverImg('some.png');
  });
  return (
    <>
      <Resource
        value={imgLoc}
        onRejected={() => <p>error ...</p>}
        onResolved={(res) =>
          res && (
            <>
              <Image
                src={res}
              />
            </>
          )
        }
      />
    </>
  );
};
/*
{
  "origin": "test.tsx",
  "name": "ModelImg_component_iJe6ICWVnyA",
  "entry": null,
  "displayName": "test.tsx_ModelImg_component",
  "hash": "iJe6ICWVnyA",
  "canonicalFilename": "test.tsx_ModelImg_component_iJe6ICWVnyA",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    319,
    780
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_ModelImg_component_imgLoc_useResource_Ogi9hEJvtmI.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
import { serverImg } from "~/routes/(authenticated)/layout";
export const ModelImg_component_imgLoc_useResource_Ogi9hEJvtmI = async ({ track }) => {
	const props = _captures[0];
	track(() => props.store.model);
	return await serverImg("some.png");
};

/*
{
  "origin": "test.tsx",
  "name": "ModelImg_component_imgLoc_useResource_Ogi9hEJvtmI",
  "entry": null,
  "displayName": "test.tsx_ModelImg_component_imgLoc_useResource",
  "hash": "Ogi9hEJvtmI",
  "canonicalFilename": "test.tsx_ModelImg_component_imgLoc_useResource_Ogi9hEJvtmI",
  "path": "",
  "extension": "js",
  "parent": "ModelImg_component_iJe6ICWVnyA",
  "ctxKind": "function",
  "ctxName": "useResource$",
  "captures": true,
  "captureNames": [
    "props"
  ],
  "loc": [
    372,
    488
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
== DIAGNOSTICS ==
[]
