crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_merge_attributes_with_spread_props.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
export default qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
export const _u6BtPnK76q4 = (props) => {
			return <div {...props} class={[props.class, 'component']} />;
		};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    66,
    159
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==
[]
